@@ -1,3 +1,11 @@
+2016-11-26 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/include/stdlib.h,
+	  device/lib/incl.mk,
+	  device/lib/mbstowcs.c,
+	  device/lib/wcstombs.c:
+	  Multibyte/wide string conversion functions.
+
 2016-11-17 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCClospre.cc,
